--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,9 +33,13 @@ dependencies:
 
   sizer: ^3.1.3
   flutterfire_cli: ^1.3.1
-  hydro_glass_nav_bar: ^1.0.0-pre.3
+  crystal_navigation_bar: ^1.1.0
   firebase_core: ^4.4.0
   firebase_auth: ^6.1.4
+  provider: ^6.1.5+1
+  cloud_firestore: ^6.1.2
+  carousel_slider: ^5.1.1
+  animated_leaderboard: ^0.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
