--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
 
   sizer: ^3.1.3
-  flutterfire_cli: ^1.3.1
+  mobile_scanner: ^7.1.4
   crystal_navigation_bar: ^1.1.0
   firebase_core: ^4.4.0
   firebase_auth: ^6.1.4
