--- a/userapp/pubspec.yaml
+++ b/userapp/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   sizer: ^2.0.15
   pretty_qr_code: ^3.2.0
+  provider: ^6.0.0
   google_fonts: ^6.1.0
   cached_network_image: ^3.3.0
 
