--- a/userapp/pubspec.yaml
+++ b/userapp/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.0
   google_fonts: ^6.1.0
   cached_network_image: ^3.3.0
+  crystal_navigation_bar: ^1.1.0
 
 
 dev_dependencies:
