--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   sizer: ^3.1.3
   mobile_scanner: ^7.1.4
+  flutter_icon_snackbar: ^1.2.1
   crystal_navigation_bar: ^1.1.0
   firebase_core: ^4.4.0
   firebase_auth: ^6.1.4
@@ -70,7 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - asset/animated_login_character.riv
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
